# aperture

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
config/: settings.default.json
crates/capture/: Cargo.toml
crates/capture/src/: exclusion.rs  hooks.rs  lib.rs  nm_bridge.rs  normalizer.rs  phash.rs  sampler.rs  toggle.rs  uia.rs  wgc.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: browser.rs  deeplinker.rs  document.rs  heuristics.rs  ide.rs  lib.rs  registry.rs  vscode_mru.rs  youtube.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: connector.rs  context_payload.rs  event.rs  gpu_job.rs  lib.rs  reasoning.rs  suggestions.rs
crates/contracts/src/fakes/: mod.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql  0002_pattern_mute_persist.sql
crates/db/src/: lib.rs  migrations.rs  retention.rs
crates/embedding/: Cargo.toml
crates/embedding/examples/: fetch_model.rs
crates/embedding/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/gates/: Cargo.toml
crates/gates/src/: lib.rs
crates/gates/tests/: m0_schema_roundtrip.rs  m4_us1_resume.rs  m5_budget_ceiling.rs  m5_load_times.rs  m5_wake_band.rs  m6_l2_swap.rs  sc5_network_monitor.rs  sc6_vram_release.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: budget_enforcer.rs  gpu_scheduler.rs  lib.rs  model_lifecycle.rs  telemetry.rs  tier_router.rs  toggle_owner.rs  vram_table.rs  warm_keep.rs
crates/pattern-engine/: Cargo.toml
crates/pattern-engine/src/: config.rs  feedback.rs  lib.rs  ngram.rs  normalizer.rs  scorer.rs  sessionizer.rs  temporal.rs  trigger.rs
crates/privacy/: Cargo.toml
crates/privacy/src/: audit_log.rs  consent.rs  exclusion_manager.rs  key_manager.rs  lib.rs  redaction.rs
crates/reasoning-gateway/: Cargo.toml
crates/reasoning-gateway/src/: lib.rs  payload_builder.rs  preview.rs  suggestion_validator.rs
crates/reasoning-gateway/src/transports/: api.rs  cli.rs  mcp.rs  mod.rs
crates/stt-host/: Cargo.toml
crates/stt-host/src/: main.rs
crates/suggestion-generator/: Cargo.toml
crates/suggestion-generator/src/: lib.rs
crates/vision-ocr/: Cargo.toml
crates/vision-ocr/src/: frame_processor.rs  lib.rs  ocr_engine.rs  screen_context_writer.rs  vlm_gating.rs  vlm_layer.rs  windows_media_ocr.rs
crates/vlm-host/: Cargo.toml
crates/vlm-host/src/: main.rs
crates/voice/: Cargo.toml
crates/voice/src/: audio_capture.rs  hotkey.rs  intent_classifier.rs  lib.rs  retrieval.rs  stt_job.rs  utterance_logger.rs  vad.rs
docs/: 00-README.md  01-product-requirements.md  02-system-architecture.md  03-data-model-schema.md  04-resource-performance-budget.md  05-capture-event-subsystem.md  06-vision-ocr-pipeline.md  07-voice-ptt-stt.md  08-behavior-pattern-engine.md  09-reasoning-claude-integration.md  10-deeplink-connectors.md  11-bubble-ui-overlay.md  12-orchestration-resource-manager.md  13-privacy-security-consent.md  14-design-system-chromemorphism.md  15-interface-contracts.md  16-build-sequencing-milestones.md  17-risk-register.md  18-coherence-review.md  19-refinement-adrs.md  20-doc-amendments.md  21-coherence-review-r2.md  22-v2-agent-execution-layer.md
docs/handoff/: claude-code-build-prompt-m1-m3.md  m6-m7-session-bridge.md  session-bridge-2026-07-08-m6-m8.md  session-bridge.md
docs/session-bridge/: 2026-07-05-audit-fixes-and-downloads.md
extension/: README.md  background.js  manifest.json
extension/content/: youtube.js
extension/host-manifest/: com.aperture.bridge.json.template
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  events.rs  main.rs  overlay.rs  pipeline.rs
src-tauri/src/commands/: mod.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: Bubble.tsx  BubbleContainer.tsx  CaptureIndicator.tsx  ContextPreviewPanel.tsx  VoiceSurfaces.tsx
ui/src/lib/: ipc.ts
ui/src/state/: bubbleLifecycle.ts  glassBudget.ts  gpuBusy.ts
ui/src/styles/: bubble.css  design-tokens.css
xtask/: Cargo.toml
xtask/src/: main.rs
