[package]
name = "aperture-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deep-link / state-resumption connectors (doc 10): the expansion seam (G3). Browser, YouTube, document, and VS Code connectors that capture a resumable handle and reconstruct it into a ShellExecuteW / protocol-URI dispatch. CPU-trivial; no GPU, no network."

[dependencies]
aperture-contracts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# ConnectorState row ids (doc 03 `connector_state.id` is a uuid).
uuid = { workspace = true }

# URL parsing for the YouTube `v=`/`t=` and browser-URL connectors (doc 10 §2-3).
url = "2"  # [VERIFY resolved — compiles clean on 2.x]

# Read-only access to VS Code's own `state.vscdb` for the workspace-MRU path
# resolution (Q56 spike decision, doc 10 §5). Local file read only — no network.
rusqlite = { workspace = true }

# Win32 Shell dispatch (ShellExecuteW) for Path B resumption (doc 02 §5), COM
# shell-link resolution for the Recent-Items ladder rung (doc 10 §4).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
] }
