[package]
name = "aperture-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite (WAL) + sqlite-vec storage, migrations, and the single-writer Tier-0 pipeline (doc 03). At-rest encryption is applied at connect time (doc 13)."

[dependencies]
aperture-contracts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# rusqlite `bundled` ships SQLite. [VERIFY resolved — Step 0]: sqlite-vec is the
# crates.io `sqlite-vec` crate (C extension built via cc, registered via
# sqlite3_auto_extension before connections open); libsqlite3-sys is pinned to
# rusqlite's bundled copy so the extension links against the same SQLite.
# SQLCipher-style encryption remains [VERIFY] at M9 (doc 13 §6) — candidate:
# rusqlite `bundled-sqlcipher` feature, swapped in without touching callers.
rusqlite = { workspace = true }
sqlite-vec = "0.1"
libsqlite3-sys = "*"  # version driven by rusqlite's bundled selection
