[package]
name = "aperture-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CPU text embedding (nomic-embed-text-v1.5, 768-d pinned) for ctx_vec KNN and pattern centroids (doc 03 §5, doc 06 §2, doc 04 §7-8)."

[dependencies]
aperture-contracts = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# [VERIFY resolved — M2]: backend = fastembed (ONNX Runtime, CPU) behind the
# `nomic` feature. Chosen over the build prompt's llama-cpp-2 suggestion because
# llama-cpp-2 needs cmake + libclang on MSVC; the Embedder trait absorbs the
# swap. Feature is OFF by default: first use downloads the model (~250 MB) —
# an explicit opt-in setup step, never an implicit build cost (metered data).
fastembed = { version = "4", optional = true }

[features]
default = []
# The real nomic-embed-text-v1.5 backend. Enable with:
#   cargo build -p aperture-embedding --features nomic
# First run downloads the ONNX weights into the configured cache dir (models/).
nomic = ["dep:fastembed"]
