[package]
name = "aperture-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CPU text embedding (nomic-embed-text-v1.5, 768-d pinned) for ctx_vec KNN and pattern centroids (doc 03 §5, doc 06 §2, doc 04 §7-8)."

[dependencies]
aperture-contracts = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# [VERIFY resolved — M2]: backend = fastembed (ONNX Runtime, CPU) behind the
# `nomic` feature. Chosen over the build prompt's llama-cpp-2 suggestion because
# llama-cpp-2 needs cmake + libclang on MSVC; the Embedder trait absorbs the
# swap.
fastembed = { version = "4", optional = true }

[features]
# Default ON since 2026-07-05: the weights are fetched (repo models/, ~295 MB
# on disk — the one-time setup step, examples/fetch_model.rs). Build with
# --no-default-features for the zero-download HashEmbedder dev path.
default = ["nomic"]
# The real nomic-embed-text-v1.5 backend (the M2 spec default, doc 04 §7).
nomic = ["dep:fastembed"]
