[package]
name = "aperture-gates"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Milestone validation-gate test harnesses (doc 16): the M0 schema round-trip plus the two permanent regression gates SC5 (zero silent egress) and SC6 (toggle releases VRAM). A lib crate whose real surface is the integration tests under tests/."

[dependencies]
# The fakes feature gives the gate tests the ScriptedEventPlayer, golden payloads,
# FakeConnector/FakeScheduler/FakeTransport used to drive a deterministic, offline
# proactive-path run (doc 15 §7). The M0 gate also asserts these compile + instantiate.
aperture-contracts = { workspace = true, features = ["fakes"] }
# aperture-db gives us the authoritative embedded DDL (migrations::MIGRATIONS) and,
# as a transitive dep, the `bundled` rusqlite used to materialize a scratch DB.
aperture-db = { workspace = true }

# rusqlite (re-declared so the test files can name its types directly) and serde_json
# (to (de)serialize the Event payload / round-trip each EventType through the schema).
rusqlite = { workspace = true }
serde_json = { workspace = true }

# M4 gate (m4_us1_resume): the real connectors + the bubble renderer, driven
# offline over synthetic events. CPU-only, no network — the gate stays honest.
aperture-connectors = { workspace = true }
aperture-suggestion-generator = { workspace = true }

# M5 gate (m5_budget_ceiling / m5_wake_band): the BudgetEnforcer + TierRouter, to
# assert the ≤ 7.0 GB admission invariant (ADR-030) and the 3–10/h wake band
# (ADR-032) as pure logic — no scheduler, no GPU, no network. Its transitive
# reqwest (loopback-only, doc 13 §2) is never exercised by these gates.
aperture-orchestration = { workspace = true }

# NOTE (doc 16 M0): no extra dev-dependencies. The gate tests deliberately avoid a
# network/HTTP/process-spawn crate — pulling one in here would itself violate the
# two-emitter rule (doc 13 §2) that these very gates exist to protect. The SC5/SC6
# monitor backends are external tools (ETW / mitmproxy / nvidia-smi), invoked out of
# process and marked `#[ignore]` until M7 / the RTX-target gate wires them up.
