[package]
name = "aperture-reasoning-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The reasoning & Claude integration gateway (doc 09): builds/previews/sends the Context Payload via swappable transports (CLI / Desktop-MCP / Messages API). THE ONLY crate permitted to open network sockets or spawn the Claude CLI (two-emitter rule, doc 13 §2)."

[dependencies]
aperture-contracts = { workspace = true }
aperture-privacy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# --- third-party owned by this crate (NOT workspace deps) ---
# This crate is the SOLE owner of the network + CLI-spawn capability (doc 13 §2),
# so the HTTP client and hashing crates live here and nowhere else.
# `reqwest` for the Messages-API transport (HTTPS). rustls (not native-tls) to
# avoid an OpenSSL build dep on Windows; `json` for ergonomic bodies. [VERIFY] at build time.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }  # [VERIFY]
# `sha2` to compute the SHA-256 of the wire bytes for the `cloud_send` audit row
# (doc 13 §3, doc 09 §5). [VERIFY] at build time.
sha2 = "0.10"  # [VERIFY]
